--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ authors = [
 description = "NAIF Leapseconds Kernel for SPICE"
 readme = "README.md"
 requires-python = ">=3.7"
+license = {file = "LICENSE"}
 
 [project.optional-dependencies]
 tests = [
@@ -22,4 +23,4 @@ tests = [
 include-package-data = true
 
 [tool.setuptools.package-data]
-naif_leapseconds = ["naif_leapseconds/latest_leapseconds.tls", "naif_leapseconds/latest_leapseconds.md5"]
+naif_leapseconds = ["naif_leapseconds/latest_leapseconds.tls", "naif_leapseconds/latest_leapseconds.md5", "../LICENSE"]
